--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
@@ -26,7 +26,7 @@
       <a mat-list-item [routerLink]="'/dashboard'" (click)="sidenav.close()"><mat-icon class="icone-side" >dashboard</mat-icon>Tableau de bord</a>
       <a mat-list-item [routerLink]="'/evenement/agenda'" (click)="sidenav.close()"><mat-icon class="icone-side">today</mat-icon>Agenda</a>
       <a mat-list-item [routerLink]="'/materiel/liste'" (click)="sidenav.close()"><mat-icon class="icone-side" >local_gas_station</mat-icon>Matériel</a>
-      <a mat-list-item [routerLink]="'/documentListe'" (click)="sidenav.close()"><mat-icon class="icone-side" >description</mat-icon>Documents</a>
+      <a mat-list-item [routerLink]="'/document/liste'" (click)="sidenav.close()"><mat-icon class="icone-side" >description</mat-icon>Documents</a>
       <a mat-list-item [routerLink]="'/moniteur'" (click)="sidenav.close()"><mat-icon class="icone-side" >video_label</mat-icon>Moniteur</a>
       <a mat-list-item [routerLink]="'/garage'" (click)="sidenav.close()"><mat-icon class="icone-side" >directions_car</mat-icon>Garage</a>
       <a mat-list-item [routerLink]="'/utilisateur/contact'" (click)="sidenav.close()"><mat-icon class="icone-side" >contact_support</mat-icon>Contactez-nous</a>
@@ -35,7 +35,7 @@
   <mat-sidenav-content>
     <div class="cont1">
       <router-outlet></router-outlet>
-      <!-- <app-footer></app-footer> -->
+      <app-footer></app-footer>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
