--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/info-modal/info-modal.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/info-modal/info-modal.component.html
@@ -2,24 +2,28 @@
 <div class="modal-body">
   <mat-card class="mat-elevation-z4">
     <mat-card-header>      
-        <mat-card-title>{{materiel.marque}}</mat-card-title>
-        <mat-card-subtitle>{{materiel.modele}}</mat-card-subtitle>
+        <mat-card-title>{{materiel.marque}}  {{materiel.modele}}</mat-card-title>
+        <mat-card-subtitle>{{materiel.ref}}</mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image src="/assets/images/toad.jpg" alt="Photo of a Shiba Inu">
     <mat-card-content>
         <mat-list dense>
             <mat-list-item>
-                <mat-icon matPrefix class="icone-info-card">fingerprint</mat-icon>
+                <mat-icon matPrefix class="icone-info-card">place</mat-icon>
                localisation :  {{materiel.localisation}}
             </mat-list-item>
             <mat-list-item>
-                <mat-icon matPrefix class="icone-info-card">cake</mat-icon>
+                <mat-icon matPrefix class="icone-info-card">settings</mat-icon>
                niveau d'état :  {{materiel.etat}}
             </mat-list-item>
             <mat-list-item>
-                <mat-icon matPrefix class="icone-info-card">alternate_email</mat-icon>
+                <mat-icon matPrefix class="icone-info-card">date_range</mat-icon>
                date d'achat : {{materiel.dateAchat}}
             </mat-list-item>
+            <mat-list-item>
+              <mat-icon matPrefix class="icone-info-card">euro_symbol</mat-icon>
+             prix d'achat : {{materiel.prix}} €
+          </mat-list-item>
         </mat-list>
     </mat-card-content>
 </mat-card>
