--- a/pfr-registation-frontend/pfr-registation-angular/src/app/login/login.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/login/login.component.css
@@ -35,6 +35,7 @@
 }
 .col-droite{
     background-color: #5B8E7D;
+    height: 700px;
 }
 #nom-appli{
     margin-top: 20px;
@@ -50,9 +51,9 @@ background-color: lightgoldenrodyellow;
 }
 
 agm-map {
-    height: 500px;
+    height: 400px;
 }
-.backTop{
+.backtop{
     font-size: 50px;
     position: fixed;
     bottom: 40px;
