ajout photo sur home page

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/login/login.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/login/login.component.html
@@ -54,6 +54,10 @@
   </div>
   <!-- FIN -->
 
+  <div class="row">
+    <img src="\assets\images\photo-app.png" alt="photo-app" width=100%>
+  </div>
+
   <!-- DEBUT ROW3 -->
   <div class="row align-items-center" style="background: #f8f9fa; height: 500px;">
     <div class="container">
