--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/footer/footer.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/footer/footer.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="col-xs-6 col-md-4">
       <mat-list class="case" >
-        <a mat-list-item [routerLink]="'/evenement'" class="footer-liste"> Agenda </a>
+        <a mat-list-item [routerLink]="'/evenement/agenda'" class="footer-liste"> Agenda </a>
         <a mat-list-item [routerLink]="'/document/liste'" class="footer-liste">Documents </a>
 
        </mat-list>
