changement du routing pour bouton ajouter document dans liste doc
gestion des conflits de package.json for good

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/document2/document-liste/document-liste.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/document2/document-liste/document-liste.component.html
@@ -1,6 +1,6 @@
 <mat-card class="card-top">
   <h2 style="margin: 0;"> Documents </h2>
-  <button mat-mini-fab color="primary" id="bouton-ajouter" [routerLink]="'/documentForm'">
+  <button mat-mini-fab color="primary" id="bouton-ajouter" [routerLink]="'/document/formulaire'">
     <mat-icon>add</mat-icon></button>
   <div ></div>
 </mat-card>
