--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/agenda/agenda.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/agenda/agenda.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container agendacontainer">
     <div class="cal-entete row">
         <div class="col-1">
             <button class="btn btn-outline-secondary auj" (click)='getMonthAgenda("n")'>Aujourd'hui</button>
