--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/ajout-modal/ajout-modal.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/ajout-modal/ajout-modal.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title class="text-center">Ajouter un évènement</h1>
+<h1 mat-dialog-title class="text-center"  cdkDrag cdkDragRootElement=".cdk-overlay-pane">Ajouter un évènement</h1>
 <div mat-dialog-content>
     <form class="form-group"  #eventForm="ngForm" (ngSubmit)="ajouterEvenement(data.ac)">
 
