edit modal draggable

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/edit-modal/edit-modal.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/edit-modal/edit-modal.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-content>
+<div mat-dialog-content   cdkDrag cdkDragRootElement=".cdk-overlay-pane">
     <form class="form-group"  #eventForm="ngForm">
         <div class="input-group mb-3">
             <div class="input-group-prepend">
