--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/ajout-modal/ajout-modal.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/ajout-modal/ajout-modal.component.html
@@ -1,3 +1,5 @@
+
+<button class="btn btn-light float-right" (click)="close();$event.stopPropagation();">X</button>
 <h1 mat-dialog-title class="text-center"  cdkDrag cdkDragRootElement=".cdk-overlay-pane">Ajouter un évènement</h1>
 <div mat-dialog-content>
     <form class="form-group"  #eventForm="ngForm" (ngSubmit)="ajouterEvenement(data.ac)">
