--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/edit-modal/edit-modal.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/edit-modal/edit-modal.component.html
@@ -1,4 +1,5 @@
 <ng-container *ngIf="event">
+    <button class="btn btn-light float-right mb-1" (click)="close();$event.stopPropagation();">X</button>
     <div mat-dialog-content   cdkDrag cdkDragRootElement=".cdk-overlay-pane">
         <form class="form-group"  #eventForm="ngForm">
             <div class="input-group mb-3">
